# contextforge_tableau

./: ARCHITECTURE.md  REVIEW.md
deploy/: .env.example  Makefile  README.md  claude-desktop-config.example.json  docker-compose.yml
deploy/bootstrap/: Dockerfile  mint_token.py  register.py
deploy/dashboard-context/: Dockerfile  pyproject.toml
deploy/dashboard-context/catalog/: dashboards.yml
deploy/dashboard-context/src/dashboard_context/: __init__.py  admin.py  catalog.py  server.py  tableau.py
deploy/tableau-mcp/: Dockerfile
deploy/tests/: conftest.py  pytest.ini  requirements.txt  test_admin.py  test_bootstrap.py  test_catalog.py  test_integration.py  test_server.py  test_tableau.py
