[project]
name = "dashboard-context"
version = "0.1.0"
description = "MCP server that enriches Tableau dashboards with business context."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.1",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "ruamel.yaml>=0.18",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard_context"]

[project.scripts]
dashboard-context = "dashboard_context.server:main"
dashboard-context-admin = "dashboard_context.admin:main"
